--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -1,5 +1,5 @@
 driver.class.name=com.mysql.jdbc.Driver
 username=root
-password=shl137961
+password=123456
 url=jdbc:mysql://127.0.0.1:3306/itsearch
 initsize=5
