--- a/pom.xml
+++ b/pom.xml
@@ -51,4 +51,16 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			 <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-compiler-plugin</artifactId>
+                 <version>2.5.1</version>
+                 <configuration>
+                      <encoding>utf-8</encoding>
+                  </configuration>
+             </plugin>
+		</plugins>
+	</build>
 </project>
